# Sisyphus_CNC

./: .gitignore  PRD.md  README.md  generate_patterns.py  main.py  pyproject.toml
config/: config.json
core/: gcode_generator.py  motion_planner.py  resampler.py  svg_parser.py
graphify-out/: .graphify_analysis.json  .graphify_ast.json  .graphify_cached.json  .graphify_detect.json  .graphify_extract.json  .graphify_python  .graphify_semantic.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  create_semantic.py  graph.html  graph.json  manifest.json  step3.py  step4_merge.py  step5_analyze.py
hardware/: serial_controller.py
simulation/: animator.py  renderer.py
ui/: custom_mode.py  idle_mode.py  main_window.py  simulation_mode.py
