[project]
name = "sisyphus"
version = "0.1.0"
description = "Sisyphus sand table controller"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "pyserial>=3.5",
    "svgpathtools>=1.6.1",
    "numpy>=1.24.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
sisyphus = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "hardware", "simulation", "ui", "main.py"]
